--- a/games.html
+++ b/games.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="ja">
 <head>
+  <base href="/fel-an-Studio-HP/">
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>GAMES · fel an Studio</title>
