--- a/about.html
+++ b/about.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="./style.css" />
 </head>
 <body>
+  <div data-common-nav></div>
   <header class="wrap site">
     <div class="brand">
       <div class="mark">·/·</div>
