--- a/about.html
+++ b/about.html
@@ -1,7 +1,6 @@
 <!doctype html>
 <html lang="ja">
 <head>
-  <base href="/fel-an-Studio-HP/">
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>ABOUT · fel an Studio</title>
@@ -9,7 +8,6 @@
   <link rel="stylesheet" href="./style.css" />
 </head>
 <body>
-  <div data-common-nav></div>
   <header class="wrap site">
     <div class="brand">
       <div class="mark">·/·</div>
@@ -23,15 +21,15 @@
     <section class="hero">
   <p class="title">ABOUT</p>
   <h2>fel an Studio</h2>
-  <p>fel an（フェルアン）は、古代語の断片です。</p>
+  <p>fel an（フェルアン）は、古代語の断片です。意味は「温かさを置いておく」。</p>
   <hr class="sep" />
-  <p>作ったものを、見ようと思えば見える場所に置いておきます。</p>
+  <p>作ったものを、見ようと思えば見える場所に置く。押し付けない。消えない。</p>
 </section>
 
 <section class="grid">
   <article class="card">
     <h3>Creator</h3>
-    <p class="mono">常世 思兼（とこよ おもいかね）</p>
+    <p class="mono">常世思兼（とこよおもいかね）</p>
     <div class="meta">
       <span class="pill">Name</span>
       <span class="pill">Alias</span>
@@ -40,7 +38,7 @@
 
   <article class="card soft">
     <h3>Notes</h3>
-    <p>ここはHPというより、浮標/ブイです。</p>
+    <p>ここは名刺ではなく、浮標です。</p>
     <div class="meta">
       <span class="pill">No push</span>
       <span class="pill">Just float</span>
@@ -53,7 +51,7 @@
   <footer class="wrap">
     <div class="footline">
       <small>© <span id="y"></span> fel an Studio</small>
-      <small class="mono">X: <a href="https://x.com/omoikane_dev" target="_blank" rel="noopener noreferrer">@omoikane_dev</a></small>
+      <small class="mono">X: <a href="https://x.com/tokoyo_omoikane" target="_blank" rel="noopener noreferrer">@tokoyo_omoikane</a></small>
     </div>
   </footer>
 
