--- a/apps.html
+++ b/apps.html
@@ -1,7 +1,6 @@
 <!doctype html>
 <html lang="ja">
 <head>
-  <base href="/fel-an-Studio-HP/">
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>APPS · fel an Studio</title>
@@ -9,7 +8,6 @@
   <link rel="stylesheet" href="./style.css" />
 </head>
 <body>
-  <div data-common-nav></div>
   <header class="wrap site">
     <div class="brand">
       <div class="mark">·/·</div>
@@ -29,11 +27,11 @@
 <section class="grid">
   <article class="card">
     <h3>Mark Guide</h3>
-    <p>AIの前提指示を育てるためのガイド。中級〜上級向けに寄せていく。</p>
+    <p>前提指示を育てるためのガイド。中級〜上級向けに寄せていく。</p>
     <div class="meta">
       <span class="pill">Desktop</span>
       <span class="pill">Preset/Custom</span>
-      <span class="pill">Status: Internal</span>
+      <span class="pill">Status: Active</span>
     </div>
   </article>
 
@@ -62,7 +60,7 @@
   <footer class="wrap">
     <div class="footline">
       <small>© <span id="y"></span> fel an Studio</small>
-      <small class="mono">X: <a href="https://x.com/omoikane_dev" target="_blank" rel="noopener noreferrer">@omoikane_dev</a></small>
+      <small class="mono">X: <a href="https://x.com/tokoyo_omoikane" target="_blank" rel="noopener noreferrer">@tokoyo_omoikane</a></small>
     </div>
   </footer>
 
