--- a/games.html
+++ b/games.html
@@ -1,7 +1,6 @@
 <!doctype html>
 <html lang="ja">
 <head>
-  <base href="/fel-an-Studio-HP/">
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>GAMES · fel an Studio</title>
@@ -22,13 +21,13 @@
     <section class="hero">
   <p class="title">GAMES</p>
   <h2>観測と余白。</h2>
-  <p>確定しないものを、確定しないまま。</p>
+  <p>確定しないものを、確定しないまま置く。</p>
 </section>
 
 <section class="grid">
   <article class="card">
-    <h3>LDOS v0.4.0 — Gen1 </h3>
-    <p>ターミナル風の観測装置。眺めるだけの実験作。</p>
+    <h3>LDOS v0.4.0 — Gen1 (Low-Dimensional Observation System)</h3>
+    <p>ターミナル風の観測装置。眺めるだけでも成立する実験作。</p>
     <div class="meta">
       <span class="pill">HTML</span>
       <span class="pill">PC</span>
@@ -41,7 +40,7 @@
 
   <article class="card soft">
     <h3>ReverSphere (RS1)</h3>
-    <p>Part 1: life → death。</p>
+    <p>Part 1: life → death。決定的瞬間は描かない。</p>
     <div class="meta">
       <span class="pill">Series</span>
       <span class="pill">Long-term</span>
@@ -55,7 +54,7 @@
   <footer class="wrap">
     <div class="footline">
       <small>© <span id="y"></span> fel an Studio</small>
-      <small class="mono">X: <a href="https://x.com/omoikane_dev" target="_blank" rel="noopener noreferrer">@omoikane_dev/a></small>
+      <small class="mono">X: <a href="https://x.com/tokoyo_omoikane" target="_blank" rel="noopener noreferrer">@tokoyo_omoikane</a></small>
     </div>
   </footer>
 
