--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!doctype html>
 <html lang="ja">
 <head>
-  <base href="/fel-an-Studio-HP/">
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>HOME · fel an Studio</title>
@@ -9,7 +8,6 @@
   <link rel="stylesheet" href="./style.css" />
 </head>
 <body>
-  <div data-common-nav></div>
   <header class="wrap site">
     <div class="brand">
       <div class="mark">·/·</div>
@@ -22,10 +20,10 @@
   <main class="wrap">
     <section class="hero">
   <p class="title">浮かべておく場所</p>
-  <h2>ここに、作ったものと、途中のものと、置いておきます。</h2>
-  <p>押し付けず。見ようと思えば見える。<span class="mono">·/·</span> はその印です。</p>
+  <h2>ここに、作ったものと、途中のものと、記録が置かれます。</h2>
+  <p>押し付けない。見ようと思えば見える。<span class="mono">·/·</span> はその印です。</p>
   <hr class="sep" />
-  
+  <p class="mono">Tip: 画面が暗すぎたら、style.css の <span class="kbd">--bg</span> / <span class="kbd">--bg2</span> を少し明るくしてください。</p>
 </section>
 
 <section class="grid">
@@ -51,7 +49,7 @@
 
   <article class="card soft">
     <h3>Records</h3>
-    <p>短文コラム／進捗の断片。意味があるようで無い。</p>
+    <p>短文コラム／進捗の断片。意味があるようで無いような。</p>
     <div class="meta">
       <span class="pill">短文</span>
       <span class="pill">Log</span>
@@ -61,7 +59,7 @@
 
   <article class="card">
     <h3>About</h3>
-    <p>説明するほどでもないような。</p>
+    <p>説明を増やしすぎない程度に。</p>
     <div class="meta">
       <span class="pill">fel an</span>
       <span class="pill">常世思兼</span>
@@ -75,7 +73,7 @@
   <footer class="wrap">
     <div class="footline">
       <small>© <span id="y"></span> fel an Studio</small>
-      <small class="mono">X: <a href="https://x.com/omoikane_dev" target="_blank" rel="noopener noreferrer">@omoikane_dev</a></small>
+      <small class="mono">X: <a href="https://x.com/tokoyo_omoikane" target="_blank" rel="noopener noreferrer">@tokoyo_omoikane</a></small>
     </div>
   </footer>
 
