--- a/records.html
+++ b/records.html
@@ -1,7 +1,6 @@
 <!doctype html>
 <html lang="ja">
 <head>
-  <base href="/fel-an-Studio-HP/">
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>RECORDS · fel an Studio</title>
@@ -9,7 +8,6 @@
   <link rel="stylesheet" href="./style.css" />
 </head>
 <body>
-  <div data-common-nav></div>
   <header class="wrap site">
     <div class="brand">
       <div class="mark">·/·</div>
@@ -23,13 +21,13 @@
     <section class="hero">
   <p class="title">RECORDS</p>
   <h2>断片。</h2>
-  <p>その時の一瞬を置いておく。</p>
+  <p>起承転結を意識しない。世界の中の一瞬だけを置く。</p>
 </section>
 
 <section class="grid">
   <article class="card">
     <h3>短文コラム</h3>
-    <p>その時の、余白を少し。</p>
+    <p>タイトルは「短文コラム｜〇〇」。本文は短く、余白は多く。</p>
     <div class="meta">
       <span class="pill">Text</span>
       <span class="pill">X</span>
@@ -39,7 +37,7 @@
 
   <article class="card soft">
     <h3>進捗ログ</h3>
-    <p>作業の電信柱。</p>
+    <p>作業の電信柱。大きな説明はしない。</p>
     <div class="meta">
       <span class="pill">Devlog</span>
       <span class="pill">Sparse</span>
@@ -52,7 +50,7 @@
   <footer class="wrap">
     <div class="footline">
       <small>© <span id="y"></span> fel an Studio</small>
-      <small class="mono">X: <a href="https://x.com/omoikane_dev" target="_blank" rel="noopener noreferrer">@omoikane_dev</a></small>
+      <small class="mono">X: <a href="https://x.com/tokoyo_omoikane" target="_blank" rel="noopener noreferrer">@tokoyo_omoikane</a></small>
     </div>
   </footer>
 
