--- a/games.html
+++ b/games.html
@@ -8,15 +8,15 @@
   <link rel="stylesheet" href="./style.css" />
 </head>
 <body>
-  
   <header class="wrap site">
     <div class="brand">
       <div class="mark">·/·</div>
       <h1>fel an Studio</h1>
       <div class="tag mono">fel an = 温かさを置いておく</div>
     </div>
+    <div data-common-nav></div>
   </header>
-  <div data-common-nav></div>
+
   <main class="wrap">
     <section class="hero">
   <p class="title">GAMES</p>
@@ -26,15 +26,13 @@
 
 <section class="grid">
   <article class="card">
-    <h3>LDOS v0.4.0 — Gen1 (Low-Dimensional Observation System)</h3>
+    <h3>LDOS (Low-Dimensional Observation System)</h3>
     <p>ターミナル風の観測装置。眺めるだけでも成立する実験作。</p>
     <div class="meta">
       <span class="pill">HTML</span>
       <span class="pill">PC</span>
       <span class="pill">Experimental</span>
       <span class="pill">Status: WIP</span>
-      <a class="pill pill-link" href="games/ldos/index.html">→ Play</a>
-      <a class="pill pill-link" href="downloads/ldos_gen1_v0.4.0.zip" download>↓ Download</a>
     </div>
   </article>
 
