--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
 <section class="grid">
   <article class="card">
     <h3>Creator</h3>
-    <p class="mono">常世思兼（とこよおもいかね）</p>
+    <p class="mono">常世 思兼（とこよ おもいかね）</p>
     <div class="meta">
       <span class="pill">Name</span>
       <span class="pill">Alias</span>
@@ -38,7 +38,7 @@
 
   <article class="card soft">
     <h3>Notes</h3>
-    <p>ここは名刺ではなく、浮標です。</p>
+    <p>ここは一般的なHPとしてではなく、海に浮かぶ浮標/ブイとして使います。</p>
     <div class="meta">
       <span class="pill">No push</span>
       <span class="pill">Just float</span>
@@ -51,7 +51,7 @@
   <footer class="wrap">
     <div class="footline">
       <small>© <span id="y"></span> fel an Studio</small>
-      <small class="mono">X: <a href="https://x.com/tokoyo_omoikane" target="_blank" rel="noopener noreferrer">@tokoyo_omoikane</a></small>
+      <small class="mono">X: <a href="https://x.com/tokoyo_omoikane" target="_blank" rel="noopener noreferrer">@omoikane_dev</a></small>
     </div>
   </footer>
 
