--- a/apps.html
+++ b/apps.html
@@ -27,7 +27,7 @@
 <section class="grid">
   <article class="card">
     <h3>Mark Guide</h3>
-    <p>前提指示を育てるためのガイド。中級〜上級向けに寄せていく。</p>
+    <p>前提指示を育てるためのガイド。中級〜上級向け。</p>
     <div class="meta">
       <span class="pill">Desktop</span>
       <span class="pill">Preset/Custom</span>
@@ -60,7 +60,7 @@
   <footer class="wrap">
     <div class="footline">
       <small>© <span id="y"></span> fel an Studio</small>
-      <small class="mono">X: <a href="https://x.com/tokoyo_omoikane" target="_blank" rel="noopener noreferrer">@tokoyo_omoikane</a></small>
+      <small class="mono">X: <a href="https://x.com/tokoyo_omoikane" target="_blank" rel="noopener noreferrer">@omoikane_dev</a></small>
     </div>
   </footer>
 
