--- a/games.html
+++ b/games.html
@@ -21,13 +21,13 @@
     <section class="hero">
   <p class="title">GAMES</p>
   <h2>観測と余白。</h2>
-  <p>確定しないものを、確定しないまま置く。</p>
+  <p>確定しないものを、確定しないまま置いておく。</p>
 </section>
 
 <section class="grid">
   <article class="card">
     <h3>LDOS (Low-Dimensional Observation System)</h3>
-    <p>ターミナル風の観測装置。眺めるだけでも成立する実験作。</p>
+    <p>ターミナル風の観測装置。眺めるだけの実験作。</p>
     <div class="meta">
       <span class="pill">HTML</span>
       <span class="pill">PC</span>
@@ -38,7 +38,7 @@
 
   <article class="card soft">
     <h3>ReverSphere (RS1)</h3>
-    <p>Part 1: life → death。決定的瞬間は描かない。</p>
+    <p>Part 1: life → death。</p>
     <div class="meta">
       <span class="pill">Series</span>
       <span class="pill">Long-term</span>
@@ -52,7 +52,7 @@
   <footer class="wrap">
     <div class="footline">
       <small>© <span id="y"></span> fel an Studio</small>
-      <small class="mono">X: <a href="https://x.com/tokoyo_omoikane" target="_blank" rel="noopener noreferrer">@tokoyo_omoikane</a></small>
+      <small class="mono">X: <a href="https://x.com/tokoyo_omoikane" target="_blank" rel="noopener noreferrer">@omoikane_dev</a></small>
     </div>
   </footer>
 
