--- a/index.html
+++ b/index.html
@@ -20,10 +20,9 @@
   <main class="wrap">
     <section class="hero">
   <p class="title">浮かべておく場所</p>
-  <h2>ここに、作ったものと、途中のものと、記録が置かれます。</h2>
-  <p>押し付けない。見ようと思えば見える。<span class="mono">·/·</span> はその印です。</p>
-  <hr class="sep" />
-  <p class="mono">Tip: 画面が暗すぎたら、style.css の <span class="kbd">--bg</span> / <span class="kbd">--bg2</span> を少し明るくしてください。</p>
+  <h2>ここに、作ったものと、途中のものと、置いておきます。</h2>
+  <p>押し付けず、見ようと思えば見える。<span class="mono">·/·</span> はその印です。</p>
+  
 </section>
 
 <section class="grid">
@@ -59,7 +58,7 @@
 
   <article class="card">
     <h3>About</h3>
-    <p>説明を増やしすぎない程度に。</p>
+    <p>説明するほどでもない説明。</p>
     <div class="meta">
       <span class="pill">fel an</span>
       <span class="pill">常世思兼</span>
@@ -73,7 +72,7 @@
   <footer class="wrap">
     <div class="footline">
       <small>© <span id="y"></span> fel an Studio</small>
-      <small class="mono">X: <a href="https://x.com/tokoyo_omoikane" target="_blank" rel="noopener noreferrer">@tokoyo_omoikane</a></small>
+      <small class="mono">X: <a href="https://x.com/tokoyo_omoikane" target="_blank" rel="noopener noreferrer">@omoikane_dev</a></small>
     </div>
   </footer>
 
