--- a/records.html
+++ b/records.html
@@ -21,13 +21,13 @@
     <section class="hero">
   <p class="title">RECORDS</p>
   <h2>断片。</h2>
-  <p>起承転結を意識しない。世界の中の一瞬だけを置く。</p>
+  <p>起承転結は意識せず。その時の気分。</p>
 </section>
 
 <section class="grid">
   <article class="card">
     <h3>短文コラム</h3>
-    <p>タイトルは「短文コラム｜〇〇」。本文は短く、余白は多く。</p>
+    <p>本文は短く、余白は多く。</p>
     <div class="meta">
       <span class="pill">Text</span>
       <span class="pill">X</span>
@@ -37,7 +37,7 @@
 
   <article class="card soft">
     <h3>進捗ログ</h3>
-    <p>作業の電信柱。大きな説明はしない。</p>
+    <p>作業の電信柱。ゴールは特に無い。</p>
     <div class="meta">
       <span class="pill">Devlog</span>
       <span class="pill">Sparse</span>
@@ -50,7 +50,7 @@
   <footer class="wrap">
     <div class="footline">
       <small>© <span id="y"></span> fel an Studio</small>
-      <small class="mono">X: <a href="https://x.com/tokoyo_omoikane" target="_blank" rel="noopener noreferrer">@tokoyo_omoikane</a></small>
+      <small class="mono">X: <a href="https://x.com/tokoyo_omoikane" target="_blank" rel="noopener noreferrer">@omoikane_dev</a></small>
     </div>
   </footer>
 
